--- a/时间相关.md
+++ b/时间相关.md
@@ -3,6 +3,10 @@ date 查看日期
 	[root@mini ~]# date
 	Tue Oct 24 11:26:42 CST 2017
 
+查看昨天的时间 
+
+	date -d yesterday
+
 cal #查看当前日历
 
 	[root@mini ~]# cal
