添加tail -f 和时间组合查看日志文件

--- a/时间相关.md
+++ b/时间相关.md
@@ -17,3 +17,24 @@ cal #查看当前日历
 	15 16 17 18 19 20 21
 	22 23 24 25 26 27 28
 	29 30 31
+
+
+时间格式化
+
+	echo `date '+%Y%m%d-%H%M%S'`
+
+在用户的家目录内有一个`.bashrc`文件：
+
+	vi .bashrc
+
+之前的时候，我添加了一条alias，可以方便的查看tomcat的日志信息
+
+	# User specific aliases and functions
+	alias seelog='tail -f /data/tomcat/allin_api/logs/catalina.out'
+
+后来的日志每小时生成一个新的文件，所以原来的文件名（catalina.out）就不能直接用了，要变成catalina.2017122710.out，因此修改了一下这个命令：
+
+	# User specific aliases and functions
+	alias seelog="tail -f /data/tomcat/allin_api/logs/catalina.`date '+%Y%m%d%H'`.out"
+
+
