--- a/vim/005.introducing_the_ex_editor.md
+++ b/vim/005.introducing_the_ex_editor.md
@@ -1,6 +1,6 @@
 # Introducing the ex Editor
 
-`vi` is the visual mode of the more general, underlying line editor, which is `ex`.
+`vi` is the visual mode of the more general, underlying **line editor**, which is `ex`.
 
 ## ex Commands
 
