--- a/vim/反思.md
+++ b/vim/反思.md
@@ -4,6 +4,24 @@
 这个需要不断的练习。
 
 
+keyword completion: Ctrl+P
+Whole line completion: Ctrl+X Ctrl+L
+File Name completion: Ctrl+X Ctrl+F
+
+```
+dt(    # 删除直到(
+dt"    # 删除直到"
+3fa → 在当前行查找第三个出现的a。
+```
+
+http://yannesposito.com/Scratch/en/blog/Learn-Vim-Progressively/
+
+`:history`也可以查看vim的命令历史
+
+高手进阶：
+
+i 表示 inside，打开 Vim 后，执行 `:help object-select` 可以看详细介绍。
+
 verb(action): single character verb / 
 
 第二种类型的verb，可以与motion和text object进行组合
