--- a/F_Filesystem/tools/000.file.md
+++ b/F_Filesystem/tools/000.file.md
@@ -2,9 +2,9 @@
 
 <!-- TOC -->
 
-- [1. Linux文件类型](#1-Linux%E6%96%87%E4%BB%B6%E7%B1%BB%E5%9E%8B)
-- [2. Linux文件时间](#2-Linux%E6%96%87%E4%BB%B6%E6%97%B6%E9%97%B4)
-- [3. file命令](#3-file%E5%91%BD%E4%BB%A4)
+- [1. Linux文件类型](#1-linux%e6%96%87%e4%bb%b6%e7%b1%bb%e5%9e%8b)
+- [2. Linux文件时间](#2-linux%e6%96%87%e4%bb%b6%e6%97%b6%e9%97%b4)
+- [3. file命令](#3-file%e5%91%bd%e4%bb%a4)
 
 <!-- /TOC -->
 
@@ -70,7 +70,6 @@ crw-rw-rw-   1 root   tty         5,     0 Sep 23 16:55 tty     # 字符设备
 | Access   | 最近一次访问时间       |                                                              |
 | Modify   | 最近一次内容修改时间   |                                                              |
 | Change   | 最近一次元数据改变时间 | 元数据：文件名、大小、权限<br/>每一次内容的改变，必然导致元数据的改变 |
-
 
 查看文件三个时间的命令是`stat`，示例如下：
 
@@ -151,6 +150,9 @@ file /etc/passwd     # text
 More Example：拿着`file`命令到处敲敲打打
 
 ```bash
+$ file /bin/bash   # executable
+/bin/bash: ELF 64-bit LSB executable, x86-64, version 1 (SYSV), dynamically linked, interpreter /lib64/ld-linux-x86-64.so.2, for GNU/Linux 2.6.32, BuildID[sha1]=4be0cc32aba02ec4e0f010047be5ae9dee756960, stripped
+
 $ file workdir/     # directory
 workdir/: directory
 
