--- a/F_Filesystem/tools/000.ls.md
+++ b/F_Filesystem/tools/000.ls.md
@@ -1,10 +1,19 @@
 # ls命令
 
-[TOC]
+<!-- TOC -->
+
+- [1. 基本语法](#1-基本语法)
+- [2. 查看目录内容](#2-查看目录内容)
+- [3. 查看详细内容](#3-查看详细内容)
+- [4. 查看隐藏文件](#4-查看隐藏文件)
+- [5. 查看目录本身的信息](#5-查看目录本身的信息)
+- [6. 刷新目录](#6-刷新目录)
+
+<!-- /TOC -->
 
 ls command options:
 
-```
+```txt
 -a, --all 列出目录下的所有内容，包括隐藏文件和目录
 -d, --directory 查看目录本身的内容
 -F, --classify 文件或或者目录名字后加一个字符的分类标识（个人觉得，不太实用啊！！！）
@@ -14,7 +23,7 @@ ls command options:
 -t, --time 按修改时间排序（默认按修改时间倒序排序，可以和 -r 一起使用，从而按修改时间正序显示）
 ```
 
-## 0.基本语法
+## 1. 基本语法
 
 命令行的语法（基本格式）：
 
@@ -31,7 +40,7 @@ command -options arguments
 
 > 对于一般的命令来说，通常都有成对的short options和long options，其中long options是完整的单词，而short options是该单词中的一个字母（往往是首字母）。对于short options，可以进行合并，例如`ls -a -l`可以合并写成`ls -al`。
 
-## 1. 查看目录内容
+## 2. 查看目录内容
 
 ```bash
 #查看当前目录
@@ -44,7 +53,7 @@ ls /usr/local/
 ls /usr /var
 ```
 
-## 2. 查看详细内容
+## 3. 查看详细内容
 
 ```bash
 #查看当前目录下的详细内容
@@ -54,14 +63,14 @@ ls -l
 ls -l /usr/   # 其中 -l 代表 long，即长格式
 ```
 
-## 3. 查看隐藏文件
+## 4. 查看隐藏文件
 
 ```bash
 ls -a
 ls --all
 ```
 
-## 4. 查看目录本身的信息
+## 5. 查看目录本身的信息
 
 之前的ls命令都是查看目录下的内容，使用`-d`选项（options）可以查看目录本身的信息
 
@@ -71,7 +80,7 @@ ls --directory /usr/     #long  options
 ls -dl /usr/             #查看详细的目录信息
 ```
 
-## 5. 刷新目录
+## 6. 刷新目录
 
 有的时候，使用`ls`却看不到最新生成的文件，可能使用下面的命令进行“刷新”操作：
 
