--- a/F_Filesystem/tools/003.less.md
+++ b/F_Filesystem/tools/003.less.md
@@ -1,7 +1,7 @@
-# less命令
+# less
 
 ```bash
-less <file_name>   
+less <file_name>
 ```
 
 - 按`j`一行一行往下走，按`k`是一行一行往上走，
@@ -9,7 +9,6 @@ less <file_name>
 - 按`gg`到达顶端，按`G`到达文件底端
 - 按`q`退出
 - 按下`/`可以输入字符，再`Enter`后进行搜索，按`n`查找下一个，按下`N`是向上查找
-
 
 ```bash
 less /etc/passwd
