--- a/A_Concept/001.Unix.md
+++ b/A_Concept/001.Unix.md
@@ -59,7 +59,7 @@ Finally, **stability**. There is very little doubt that `GNU` and `Linux` are ex
 
 这里重点是Stable
 
-Check the uptime on your computer and you might find the machine has not been rebooted for months or years.
+Check the `uptime` on your computer and you might find the machine has not been rebooted for months or years.
 
 ```bash
 server@cloud$ uptime
@@ -77,3 +77,11 @@ up 37 weeks, 6 days, 2 hours, 47 minutes
 $ uptime -s  # Since.
 2018-10-07 22:08:08
 ```
+
+## Is Linux Unix?
+
+URL: https://www.computerhope.com/issues/ch001589.htm
+
+**No**. **Linux** is often called "**Unix-like**" because it functions in much the same way as UNIX. For instance, it uses a command-line interface. Also, many of its basic commands have the same name and serve the same purpose, like those found in UNIX.
+
+However, **the Linux operating system is not directly descended from any of UNIX's code**. Additionally, it does not comply with the official single UNIX specification technical standard as defined by the Open Group.
