--- a/A_Concept/003.GNU.md
+++ b/A_Concept/003.GNU.md
@@ -1,8 +1,37 @@
 # GNU
 
-The **GNU Project** was begun in `1984` by Richard Stallman of MIT with the aim to develop a complete free (meaning free for everyone to look at, to learn from, and to build upon) software operating system. In `1989` he codified the terms under which this free software was released, producing the **GNU Public License (GPL)** which is the basis on which much of the `GNU/Linux` operating system is released. **The license** is often referred to as **the copyleft license** in contrast to the restrictive practise of **copyright**.
+从“概念”的角度来说，
 
-By `1991` when Linus Torvalds wrote his Linux kernel GNU provided the operating system. By combining the GNU operating system with the Linux kernel the seeds for this most popular free operating system were sown.
+```txt
+operating system = Linux kernel + other software
+```
+
+从“时间线”上来说，
+
+- 1984年，Richard Stallman发起了GNU Project
+- 1991年，Linus Torvalds发布Linux kernel
+
+## What is “Linux”?
+
+“Linux” itself is just the kernel – the core part of the operating system. Other software, such as the GNU C compiler used to compile the kernel, bash command-line shell, GNU shell utilities (all the basic commands you would use on a command line), X.org graphical server, a graphical desktop like Unity, and the software that runs on top of the graphical desktop, like Firefox, are all produced by different groups of developers.
+
+Linux distributions assemble all this disparate software from different developers and call the complete package “Linux.”
+
+## The GNU Project
+
+The **GNU Project** was begun in `1984` by Richard Stallman of MIT with the aim to develop a complete free (meaning free for everyone to look at, to learn from, and to build upon) software operating system.
+
+In `1989` he codified the terms under which this free software was released, producing the **GNU Public License (GPL)** which is the basis on which much of the `GNU/Linux` operating system is released. **The license** is often referred to as **the copyleft license** in contrast to the restrictive practise of **copyright**.
+
+By `1991`, the GNU project had finished many of the pieces of the GNU operating system, including the GNU C Compiler (gcc), bash command-line shell, many shell utilities, the Emacs text editor, and more. Other parts of the operating system could be provided by already-existing free software, such as the X Window System, which provided a graphical desktop.
+
+However, the core part of the operating system – the GNU Hurd kernel – was not complete. The GNU Project chose an ambitious microkernel design for the kernel, resulting in long delays. (As of 2013, the GNU Hurd kernel has been in development for 23 years and no stable version has ever been released.)
+
+## Linux Arrives
+
+The kernel was seen as “the last missing piece” of the GNU operating system by the GNU project. In `1991`, Linus Torvalds released the first version of the Linux kernel. There was now enough software for a completely free operating system, and distributors (like modern “Linux distributions”) assmbled the Linux kernel, GNU software, and X Window System together.
+
+![](images/gnu-linux-naming-controversy.jpg)
 
 Many users installed the **GNU tools** on many different computers as replacements for vendor supplied tools. This provided these users with **a consistency** across the **many different platforms** they used. The tools even eventually appeared under MS/Windows, providing a Unix-like environment on a very different operating system.
 
@@ -14,6 +43,8 @@ GNU Project的tools，这里举了两种类型的例子：
 
 - （1） 文件管理：ls/mkdir/mv/rm
 - （2） 文件内容：cat/head/sort/wc
+
+![](images/gnu-love.jpg)
 
 ## GNU Software
 
@@ -31,7 +62,7 @@ The toolkits developed by the GNU project are comprehensive.
 - `tar`: An archive utility.
 - `textutils`: A set of utilities for manipulating text.
 - `time`: A utility to report on the time taken to execute other programs.
-- `wget`: A non-interactive web browser to retrieve files from the Internet using HTTP and FTP. 
+- `wget`: A non-interactive web browser to retrieve files from the Internet using HTTP and FTP.
 
 There are though many also that are **GUI-based** and end user focused, including `Gnome`, `KDE`, The `Gimp`, and `Gnumeric`.
 
