--- a/Filesystem/dirs/001.Directory.md
+++ b/Filesystem/dirs/001.Directory.md
@@ -4,10 +4,10 @@
 
 A Debian system is organized along the **Filesystem Hierarchy Standard** (`FHS`). This standard defines the purpose of each directory. For instance, the top-level directories are described as follows:
 
-- `/bin/`: basic programs
+- `/bin/`: basic programs，有`date`, `ls`, `mkdir`, `mv`, `cp`, `chown`等命令
 - `/boot/`: Linux kernel and other files required for its early boot process
 - `/dev/`: device files
-- `/etc/`: configuration files
+- `/etc/`: configuration files，例如`/etc/passwd`, `/etc/profile`, `/etc/group`
 - `/home/`: user’s personal files
 - `/lib/`: basic libraries
 - `/media/*`: mount points for removable devices (CD-ROM, USB keys and so on)
@@ -18,7 +18,7 @@ A Debian system is organized along the **Filesystem Hierarchy Standard** (`FHS`)
 - `/sbin/`: system programs
 - `/srv/`: data used by servers hosted on this system
 - `/tmp/`: temporary files; this directory is often emptied at boot
-- `/usr/`: applications; this directory is further subdivided into `bin`, `sbin`, `lib` (according to the same logic as in the root directory). Furthermore, `/usr/share/` contains architecture-independent data. `/usr/local/` is meant to be used by the administrator for installing applications manually without overwriting files handled by the packaging system.
+- `/usr/`: applications; this directory is further subdivided into `bin`, `sbin`, `lib` (according to the same logic as in the root directory). Furthermore, `/usr/share/` contains architecture-independent data. `/usr/local/` is meant to be used by the administrator for installing applications manually without overwriting files handled by the packaging system. (`usr` = **Unix System Resource**)
 - `/var/`: variable data handled by daemons. This includes log files, queues, spools, caches and so on.
 - `/proc/` and `/sys/` are specific to the Linux kernel (and **not part of the FHS**). They are used by the kernel for exporting data to user space.
 
