--- a/Processes/001.process_list.md
+++ b/Processes/001.process_list.md
@@ -4,5 +4,33 @@ The `ps aux` command lists the processes currently running and helps identifying
 
 Once the `pid` of a process is known, the `kill -signal pid` command allows sending it a signal (if the process belongs to the current user). Several signals exist; most commonly used are `TERM` (a request to terminate gracefully) and `KILL` (a forced kill).
 
-The command interpreter can also run programs in the background if the command is followed by a “`&`”. By using the ampersand, the user resumes control of the shell immediately even though the command is still running (hidden from the user; as a background process). The `jobs` command lists the processes running in the background; running `fg %job-number` (for foreground) restores a job to the foreground. When a command is running in the foreground (either because it was started normally, or brought back to the foreground with `fg`), the `Control+Z` key combination pauses the process and resumes control of the command-line. The process can
-then be restarted in the background with `bg %job-number` (for background).
+The command interpreter can also run programs in the background if the command is followed by a “`&`”. By using the ampersand, the user resumes control of the shell immediately even though the command is still running (hidden from the user; as a background process). The `jobs` command lists the processes running in the background; running `fg %job-number` (for foreground) restores a job to the foreground. When a command is running in the foreground (either because it was started normally, or brought back to the foreground with `fg`), the `Control+Z` key combination pauses the process and resumes control of the command-line. The process can then be restarted in the background with `bg %job-number` (for background).
+
+## What is a Process in Linux?
+
+A **process** is a fundamental part of any operating system - irrespective of whether they are proprietary or Free. And all Operating systems usually have a lot of processes running at any given time. This begs the question, what exactly is a process?
+
+**A process is essentially a container**, bundling a running application, its environment variables, the state of the application's input and output, and the state of the process, including its priority and accumulated resource usage.
+
+In short, every single application that you run on your machine will have its own unique process allocated to it for the duration of the time it runs.
+
+In Linux, each of that unique process has a parent process from which it is forked (cloned, spawned) initially. The very first process that is created by Linux when you turn on the machine is the `init` process.
+
+Process ID of the `init` process is always `1`.
+
+All other processes in Linux are ultimately descended from `init`.
+
+To check the process ID of `init`, run the following command.
+
+```bash
+$ ps -ef | grep init
+root         1     0  0 Oct20 ?        00:00:01 /sbin/init
+liusen   24418  6289  0 02:10 pts/1    00:00:00 grep init
+```
+
+Read the following article written by Martin Streicher that explains a process in much more detail. Even though the article describes processes in Unix, what is written there is equally applicable to Linux as well.
+
+## Reference
+
+- [What is a Process in Linux ?](http://www.aboutlinux.info/2012/04/what-is-process-in-linux.html)
+- [UNIX processes](https://www.ibm.com/developerworks/aix/library/au-speakingunix8/?ca=dgr-lnxw01speakunix8)
