--- a/A_Concept/004.POSIX.md
+++ b/A_Concept/004.POSIX.md
@@ -1,5 +1,7 @@
 # POSIX
 
+The **Portable Operating System Interface** (**POSIX**) is a family of standards specified by the IEEE Computer Society for maintaining compatibility between operating systems. POSIX defines the application programming interface (API), along with command line shells and utility interfaces, for software compatibility with variants of Unix and other operating systems.
+
 POSIX表示可移植操作系统接口（Portable Operating System Interface of UNIX，缩写为 POSIX ），POSIX标准定义了操作系统应该为应用程序提供的接口标准，是IEEE为要在各种UNIX操作系统上运行的软件而定义的一系列API标准的总称，其正式称呼为`IEEE 1003`，而国际标准名称为ISO/IEC 9945。
 
 POSIX的诞生和UNIX的发展是密不可分的，电气和电子工程师协会（Institute of Electrical and Electronics Engineers，IEEE）最初开发 POSIX 标准，是为了提高 UNIX 环境下应用程序的可移植性。
